--- a/app/views/patients/_apd_regimes.html.haml
+++ b/app/views/patients/_apd_regimes.html.haml
@@ -8,15 +8,21 @@
       %th.col-width-13
         Treatment
       %th
-        Regime Bags
+        Glucose - 1.36 % (ml)
+      %th
+        Glucose - 2.27 % (ml)
+      %th
+        Glucose - 3.86 % (ml)
       %th.column-6-width
-        On HD
+        On HD?
       %th.column-6-width
         Last Fill (ml)
       %th.column-6-width
-        Additional Manual Exchange
+        Additional Manual Exchange?
       %th.column-6-width
-        Tidal
+        Has Tidal?
+      %th.column-6-width
+        Tidal (%)
       %th.column-6-width
         No. of Cycles per Session
       %th.column-6-width
@@ -39,8 +45,14 @@
         %td{ :data => { :heading => "Treatment" }, valign: "top" }
           = r.treatment
 
-        %td{ :data => { :heading => "Regime Bags" }, valign: "top" }
-          = pd_regime_bags(r.pd_regime_bags)
+        %td{ :data => { :heading => "Glucose - 1.36% (ml)" }, valign: "top" }
+          = default_daily_glucose_average(r.glucose_ml_percent_1_36)
+
+        %td{ :data => { :heading => "Glucose - 2.27% (ml)" }, valign: "top" }
+          = default_daily_glucose_average(r.glucose_ml_percent_2_27)
+
+        %td{ :data => { :heading => "Glucose - 3.86% (ml)" }, valign: "top" }
+          = default_daily_glucose_average(r.glucose_ml_percent_3_86)
 
         %td{ :data => { :heading => "On HD" } }
           = yes_no(r.add_hd)
@@ -51,9 +63,11 @@
         %td{ :data => { :heading => "Additional Manual Exchange" } }
           = yes_no(r.add_manual_exchange)
 
+        %td{ :data => { :heading => "Has Tidal?" } }
+          = yes_no(r.tidal_indicator)
+
         %td{ :data => { :heading => "Tidal" } }
-          = "Has tidal?: #{yes_no(r.tidal_indicator)}"
-          = "Volume(%): #{r.tidal_percentage}"
+          = r.tidal_percentage
 
         %td{ :data => { :heading => "Number of Cycles per Session" } }
           = r.no_cycles_per_apd
