--- a/app/views/pd_regimes/_apd_regime_show.html.haml
+++ b/app/views/pd_regimes/_apd_regime_show.html.haml
@@ -1,21 +1,21 @@
 %ul.no-bullet
-  %li
-    %b Last fill (ml):
-    = @pd_regime.last_fill_ml
-  %li
-    %b Additional manual exchange:
+  %li.padding-bottom-1
+    %b Last fill:
+    = "#{@pd_regime.last_fill_ml} ml"
+  %li.padding-bottom-1
+    %b Additional manual exchange?:
     = yes_no(@pd_regime.add_manual_exchange)
-  %li
+  %li.padding-bottom-1
     %b Has tidal?:
     = yes_no(@pd_regime.tidal_indicator)
-  %li
-    %b Tidal volume(%):
-    = @pd_regime.tidal_percentage
-  %li
+  %li.padding-bottom-1
+    %b Tidal:
+    = "#{@pd_regime.tidal_percentage} %"
+  %li.padding-bottom-1
     %b Number of cycles per APD session:
     = @pd_regime.no_cycles_per_apd
-  %li
-    %b Overnight PD volume on APD (ml):
-    = @pd_regime.overnight_pd_ml
+  %li.padding-bottom-1
+    %b Overnight PD volume on APD:
+    = "#{@pd_regime.overnight_pd_ml} ml"
 
 
