Adjusted styling of current pd regime.

--- a/app/views/pd_regimes/_current_regime.html.haml
+++ b/app/views/pd_regimes/_current_regime.html.haml
@@ -38,7 +38,7 @@
   - if @current_regime.type == 'ApdRegime'
     = render partial: 'pd_regimes/current_apd_regime', locals: { model: @current_regime }
 
-  .large-12.columns.section-underliner
+  .large-12.columns.section-underliner.padding-top-1
     %b Bags:
 
   .large-12.columns
