Adjusted styling for current pd regime.

--- a/app/views/pd_regimes/_current_regime.html.haml
+++ b/app/views/pd_regimes/_current_regime.html.haml
@@ -38,11 +38,12 @@
   - if @current_regime.type == 'ApdRegime'
     = render partial: 'pd_regimes/current_apd_regime', locals: { model: @current_regime }
 
-  .large-12.columns.section-underliner.padding-top-1
-    %b Bags:
-
   .large-12.columns
-    %ul
-      = pd_regime_bags(@current_regime.pd_regime_bags)
+    .section-underliner.padding-top-1
+      %b Bags:
+
+    .large-12.columns
+      %ul
+        = pd_regime_bags(@current_regime.pd_regime_bags)
 
 
