--- a/app/views/modality_codes/edit.html.slim
+++ b/app/views/modality_codes/edit.html.slim
@@ -8,10 +8,10 @@
   .large-6.columns
     ul.no-bullet
 
-      = form_for @modal_code, :method => :put do |m|
-        
+      = form_for @modal_code, method: :put do |m|
+
         = render partial: "modality_codes/form", locals: { m: m }
 
         = submit_tag "Update Modal", class: "button tiny right"
 
-        = link_to "Cancel", modality_codes_path, :class => "button tiny cancel"
+        = link_to "Cancel", modality_codes_path, class: "button tiny cancel"
