--- a/app/views/modality_codes/index.html.slim
+++ b/app/views/modality_codes/index.html.slim
@@ -2,7 +2,7 @@
   h4 Manage Modalities
 
 .row
-  = link_to "Add A New Modality", new_modality_code_path, :class => "button tiny"
+  = link_to "Add A New Modality", new_modality_code_path, class: "button tiny"
 
 .row
   table.responsive.modality-codes
