--- a/app/views/patients/demographics.html.slim
+++ b/app/views/patients/demographics.html.slim
@@ -6,7 +6,7 @@
     h5 Patient Demographics/Admin
 
     p
-      = link_to "Update", edit_patient_path(@patient), :title => "Edit demographics", :class => "button tiny right"
+      = link_to "Update", edit_patient_path(@patient), title: "Edit demographics", class: "button tiny right"
 
 .row
   .large-12.columns
