--- a/app/views/patients/edit.html.slim
+++ b/app/views/patients/edit.html.slim
@@ -9,7 +9,7 @@
 .row
   .large-12.columns
 
-    = form_for @patient, :method => :put do |f|
+    = form_for @patient, method: :put do |f|
 
       = hidden_field_tag :redirect_url, demographics_patient_path(@patient)
       = hidden_field_tag :message, "You have successfully updated a patient's demographics"
