--- a/app/views/pd_regimes/_form.html.slim
+++ b/app/views/pd_regimes/_form.html.slim
@@ -10,7 +10,7 @@
 
       .large-12.columns
         = r.label :treatment, 'PD Regime Treatment'
-        = r.select :treatment, capd_apd_scope(r.object.type), { :prompt => "Please select from options" }, :class => "pd-regime-treament-select"
+        = r.select :treatment, capd_apd_scope(r.object.type), { prompt: "Please select from options" }, class: "pd-regime-treament-select"
 
     .large-12.columns
       .section-underliner
