--- a/app/views/problems/_form.html.slim
+++ b/app/views/problems/_form.html.slim
@@ -25,4 +25,4 @@
     = pb.hidden_field :patient_id
 
     = pb.label :description
-    = pb.text_field :description, :class => "probs-description"
+    = pb.text_field :description, class: "probs-description"
