--- a/app/views/bag_types/index.html.slim
+++ b/app/views/bag_types/index.html.slim
@@ -3,7 +3,7 @@
     h4 Manage PD Bag Types
 
   .columns.large-12
-    = link_to "Create A New Bag Type", new_bag_type_path, :class => "button tiny"
+    = link_to "Create A New Bag Type", new_bag_type_path, class: "button tiny"
 
 .wide-screen
   .columns.large-12
