--- a/app/views/bag_types/new.html.slim
+++ b/app/views/bag_types/new.html.slim
@@ -8,11 +8,11 @@
       .large-12.columns
         h4 Create a new PD Bag Type
 
-    = form_for @bag_type, :method => :post do |bt|
+    = form_for @bag_type, method: :post do |bt|
 
       = render partial: "bag_types/form", locals: { bt: bt }
 
       ul.no-bullet.button-padding
         li= submit_tag "Save New Bag Type", class: "button tiny right save"
-        li= link_to "Cancel", patients_path, :class => "button tiny cancel"
+        li= link_to "Cancel", patients_path, class: "button tiny cancel"
 
