--- a/app/views/event_types/edit.html.slim
+++ b/app/views/event_types/edit.html.slim
@@ -4,10 +4,10 @@ h5 Edit Patient Event Type
 
 .large-6.columns
 
-  = form_for @event_type, :method => :put do |f|
+  = form_for @event_type, method: :put do |f|
     fieldset
       = render partial: "event_types/form", locals: { f: f }
 
       = submit_tag "Update Patient Event Type", class: "button tiny right"
 
-      = link_to "Cancel", event_types_path, :class => "button tiny cancel"
+      = link_to "Cancel", event_types_path, class: "button tiny cancel"
