--- a/app/views/event_types/index.html.slim
+++ b/app/views/event_types/index.html.slim
@@ -2,7 +2,7 @@
   h4 All Patient Event Types
 
 .row
-  = link_to "Add New Patient Event Type", new_event_type_path, :class => "button tiny"
+  = link_to "Add New Patient Event Type", new_event_type_path, class: "button tiny"
 
 .row
   .small-12.large-6.columns
@@ -14,4 +14,4 @@
           .small-4.large-2.columns
             = link_to "Edit", edit_event_type_path(t.id)
           .small-4.large-2.columns
-            = link_to "Delete", event_type_path(t.id), id: "#{t.id}-pet", method: :delete, :class => "delete", data: {confirm: "Are you sure you want to delete this option?" }
+            = link_to "Delete", event_type_path(t.id), id: "#{t.id}-pet", method: :delete, class: "delete", data: {confirm: "Are you sure you want to delete this option?" }
