--- a/app/views/exit_site_infections/_form.html.slim
+++ b/app/views/exit_site_infections/_form.html.slim
@@ -17,7 +17,7 @@
       | Outcome:
     .large-12.columns
       = es.label :outcome, "Outcome notes"
-      = es.text_area :outcome, :cols => 50, :rows => 6
+      = es.text_area :outcome, cols: 50, rows: 6
 
 .row
   .large-12.columns
@@ -26,7 +26,7 @@
 
     = es.fields_for :infection_organisms do |io|
 
-      = render :partial => 'infection_organisms/forms', :locals => { :io => io }
+      = render partial: 'infection_organisms/forms', locals: { io: io }
 
     .large-12.columns
       = es.link_to_add 'Record a new organism and sensitivity', :infection_organisms, class: 'add-organism-sensitivity button tiny right mt'
@@ -37,14 +37,14 @@
       | Treatment:
     .large-12.columns
       = es.label :treatment, "Treatment notes"
-      = es.text_area :treatment, :cols => 50, :rows => 6
+      = es.text_area :treatment, cols: 50, rows: 6
 
 .row
   .large-12.columns
     .section-underliner
       | Medications administered for this exit site infection:
 
-    = render :partial => 'medications/medication_forms', :locals => { object: es }
+    = render partial: 'medications/medication_forms', locals: { object: es }
 
     .large-12.columns
       = es.link_to_add 'Add a new medication', :medications, model_object: Medication.exit_site, class: 'add-medication button tiny right mt'
@@ -56,5 +56,5 @@
 
     .large-12.columns
       = es.label :notes, "General notes about this infection"
-      = es.text_area :notes, :cols => 50, :rows => 6
+      = es.text_area :notes, cols: 50, rows: 6
 
