--- a/app/views/infection_organisms/_new.html.slim
+++ b/app/views/infection_organisms/_new.html.slim
@@ -9,4 +9,4 @@
           = io.link_to_remove "Remove this organism/sensitivity", class: "button cancel tiny right hide"
 
         .row
-          = render :partial => 'infection_organisms/fields', :locals => { :io => io }
+          = render partial: 'infection_organisms/fields', locals: { io: io }
