--- a/app/views/medications/_exit_site.html.slim
+++ b/app/views/medications/_exit_site.html.slim
@@ -1,5 +1,5 @@
 .select-exit-site-drug
   = pm.label :medicatable_id, "Select Drug (exit site drugs only)"
-  = pm.collection_select :medicatable_id, Drug.peritonitis, :id, :name, { prompt: "Please select drug used to treat this exit site infection" }, :class => "exit-site-drug-select"
+  = pm.collection_select :medicatable_id, Drug.peritonitis, :id, :name, { prompt: "Please select drug used to treat this exit site infection" }, class: "exit-site-drug-select"
 
-  = pm.hidden_field :medicatable_type, value: "Drug", :class => "selected-medicatable-type"
+  = pm.hidden_field :medicatable_type, value: "Drug", class: "selected-medicatable-type"
