--- a/app/views/medications/_medication_forms.html.slim
+++ b/app/views/medications/_medication_forms.html.slim
@@ -1,7 +1,7 @@
 = object.fields_for :medications do |pm|
 
-  = render :partial => 'medications/medication', :locals => { :pm => pm } unless pm.object.new_record?
+  = render partial: 'medications/medication', locals: { pm: pm } unless pm.object.new_record?
 
   #medications
-    = render :partial => 'medications/new', :locals => { :pm => pm } if pm.object.new_record?
+    = render partial: 'medications/new', locals: { pm: pm } if pm.object.new_record?
 
