--- a/app/views/modalities/new.html.slim
+++ b/app/views/modalities/new.html.slim
@@ -17,14 +17,14 @@
 
         li
           = m.label :modality_code_id, "Modality"
-          = m.collection_select :modality_code_id, ModalityCode.all, :id, :name, {}, :id => "modality-code-select"
+          = m.collection_select :modality_code_id, ModalityCode.all, :id, :name, {}, id: "modality-code-select"
 
         li.hide-death
           = m.label :modal_change_type, "Type of Change"
-          = m.select :modal_change_type, modal_change_options(m.object.modal_change_type), {}, :class => "modal-change-type"
+          = m.select :modal_change_type, modal_change_options(m.object.modal_change_type), {}, class: "modal-change-type"
         li.hide-death
           = m.label :modality_reason_id, "Reason for Change"
-          = m.collection_select :modality_reason_id, modal_reasons_for(m.object.modal_change_type), :id, :description, {}, :class => "modality-reason-select"
+          = m.collection_select :modality_reason_id, modal_reasons_for(m.object.modal_change_type), :id, :description, {}, class: "modality-reason-select"
 
         li.hide-death
           = link_to "Renal Registry Reason for Change Codes", "#", id: "modal-reason-code", class: "button tiny mt"
@@ -35,8 +35,8 @@
 
         li.hide-death
           = m.label :notes, "Notes"
-          = m.text_area(:notes, :cols => 10, :rows => 2)
+          = m.text_area(:notes, cols: 10, rows: 2)
 
-        = m.submit "Save Modality", :class => "button tiny right save mt"
+        = m.submit "Save Modality", class: "button tiny right save mt"
 
   = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left cancel mt"
