--- a/app/views/modality_codes/new.html.slim
+++ b/app/views/modality_codes/new.html.slim
@@ -8,11 +8,11 @@
   .large-6.columns
     ul.no-bullet
 
-      = form_for @modal_code, :method => :post do |m|
-        
+      = form_for @modal_code, method: :post do |m|
+
         = render partial: "modality_codes/form", locals: { m: m }
 
         = submit_tag "Save", class: "button tiny right save"
 
-        li= link_to "Cancel", modality_codes_path, :class => "button tiny cancel"
+        li= link_to "Cancel", modality_codes_path, class: "button tiny cancel"
 
