--- a/app/views/navigation/_main.html.slim
+++ b/app/views/navigation/_main.html.slim
@@ -2,7 +2,7 @@ nav.top-bar(data-topbar role="navigation")
   ul.title-area
     li.name.has-dropdown.active
       h1
-        = link_to "RW2.0", patients_path, :title => "Home"
+        = link_to "RW2.0", patients_path, title: "Home"
 
   - if user_signed_in?
     section.top-bar-section
