--- a/app/views/patients/death.html.slim
+++ b/app/views/patients/death.html.slim
@@ -19,7 +19,7 @@
       - @dead_patients.each do |patient|
         tr
           td data-heading="Forename"
-            = link_to " #{patient.to_s(:full_name)}", clinical_summary_patient_path(patient), :title => "Clinical Summary"
+            = link_to " #{patient.to_s(:full_name)}", clinical_summary_patient_path(patient), title: "Clinical Summary"
           td data-heading=("NHS No.")
             = patient.nhs_number
           td data-heading=("Hospital No.")
@@ -33,7 +33,7 @@
           td data-heading="Age"
             = patient.age
           td.g-center data-heading="Edit death details"
-            = link_to "Edit death details", death_update_patient_path(patient.id), :title => "Edit death details"
+            = link_to "Edit death details", death_update_patient_path(patient.id), title: "Edit death details"
           td.g-center data-heading="Admin"
-            = link_to "Demographics", demographics_patient_path(patient), :title => "Demographics"
+            = link_to "Demographics", demographics_patient_path(patient), title: "Demographics"
 
