--- a/app/views/patients/esrf_info.html.slim
+++ b/app/views/patients/esrf_info.html.slim
@@ -8,13 +8,13 @@
 .row
   ul.no-bullet
     = form_for @patient do |f|
-      
+
       = hidden_field_tag :redirect_url, clinical_summary_patient_path(@patient)
-      
+
       = f.fields_for :esrf_info, @esrf_info do |esrf|
-        
-        = render :partial => 'esrf_info_form', :locals => { :esrf => esrf }
-          
-      = f.submit "Save ESRF Summary", :class => "button tiny right save mt"
+
+        = render partial: 'esrf_info_form', locals: { esrf: esrf }
+
+      = f.submit "Save ESRF Summary", class: "button tiny right save mt"
 
   = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left cancel mt"
