--- a/app/views/pd_regimes/_apd_fields.html.slim
+++ b/app/views/pd_regimes/_apd_fields.html.slim
@@ -19,7 +19,7 @@
 
     = r.label :tidal_percentage, 'Tidal (%)'
     /! = r.text_field :tidal_percentage
-    = r.select :tidal_percentage, tidal_options, { :prompt => "Please select from options" }, :class => "pd-regime-treament-select"
+    = r.select :tidal_percentage, tidal_options, { prompt: "Please select from options" }, class: "pd-regime-treament-select"
 
 .large-12.columns
   .section-underliner
