--- a/app/views/pd_regimes/new.html.slim
+++ b/app/views/pd_regimes/new.html.slim
@@ -18,9 +18,9 @@
               = "Record a #{capd_apd_title(r.object.type)} Regime"
 
         .row
-          = render :partial => 'pd_regimes/form', :locals => { :r => r }
+          = render partial: 'pd_regimes/form', locals: { r: r }
 
         .large-12.columns.button-padding
           = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel mt"
 
-          = r.submit "Save #{capd_apd_title(r.object.type)} Regime", :class => "button tiny right save mt"
+          = r.submit "Save #{capd_apd_title(r.object.type)} Regime", class: "button tiny right save mt"
