--- a/app/views/peritonitis_episodes/new.html.slim
+++ b/app/views/peritonitis_episodes/new.html.slim
@@ -17,8 +17,8 @@
       = nested_form_for [@patient, @peritonitis_episode] do |pe|
 
         .row
-          = render :partial => 'peritonitis_episodes/form', :locals => { :pe => pe }
+          = render partial: 'peritonitis_episodes/form', locals: { pe: pe }
 
         .row.button-padding
           = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel mt"
-          = pe.submit "Save Peritonitis Episode", :class => "button tiny right save mt"
+          = pe.submit "Save Peritonitis Episode", class: "button tiny right save mt"
