Fix ESRF info display spacing
Also remove colon as unsightly when ESRF data absent

--- a/app/views/renalware/patients/_mini_renal_profile.html.slim
+++ b/app/views/renalware/patients/_mini_renal_profile.html.slim
@@ -1,6 +1,8 @@
 .renal-profile
-  = link_to "ESRF:", esrf_info_patient_path(@patient)
+  = link_to "ESRF", esrf_info_patient_path(@patient)
+  = " "
   = display_prd_date(@patient)
+  = " "
   = display_prd(@patient)
 
   br
