Fixing rebase conflict for scoping current regime.

--- a/app/views/renalware/pd_regimes/_current_regime.html.slim
+++ b/app/views/renalware/pd_regimes/_current_regime.html.slim
@@ -6,22 +6,22 @@ fieldset.current-regime
       li
         b Regime Start Date:
         | &nbsp;
-        = @current_regime.start_date
+        = current.start_date
 
       li
         b Regime End Date:
         | &nbsp;
-        = default_for_blank(@current_regime.end_date, 'Pending')
+        = default_for_blank(current.end_date, 'Pending')
 
       li
         b Treatment:
         | &nbsp;
-        = @current_regime.treatment
+        = current.treatment
 
       li
         b On additional HD?:
         | &nbsp;
-        = yes_no(@current_regime.add_hd)
+        = yes_no(current.add_hd)
 
   .large-3.columns
     b Average Daily Glucose:
@@ -30,20 +30,20 @@ fieldset.current-regime
       li
         b 1.36 %:
         | &nbsp;
-        = "#{ default_daily_glucose_average(@current_regime.glucose_ml_percent_1_36) } ml"
+        = "#{ default_daily_glucose_average(current.glucose_ml_percent_1_36) } ml"
 
       li
         b 2.27 %:
         | &nbsp;
-        = "#{ default_daily_glucose_average(@current_regime.glucose_ml_percent_2_27) } ml"
+        = "#{ default_daily_glucose_average(current.glucose_ml_percent_2_27) } ml"
 
       li
         b 3.86 %:
         | &nbsp;
-        = "#{ default_daily_glucose_average(@current_regime.glucose_ml_percent_3_86) } ml"
+        = "#{ default_daily_glucose_average(current.glucose_ml_percent_3_86) } ml"
 
   - if @current_regime.type == 'Renalware::ApdRegime'
-    = render partial: 'renalware/pd_regimes/current_apd_regime', locals: { model: @current_regime }
+    = render partial: 'renalware/pd_regimes/current_apd_regime', locals: { model: current }
 
   .large-12.columns
     .section-underliner.padding-top-1
@@ -51,6 +51,6 @@ fieldset.current-regime
 
     .large-12.columns
       ul
-        = pd_regime_bags(@current_regime.pd_regime_bags)
+        = pd_regime_bags(current.pd_regime_bags)
 
 
