--- a/app/views/renalware/pd_regimes/_current_apd_regime.html.slim
+++ b/app/views/renalware/pd_regimes/_current_apd_regime.html.slim
@@ -3,31 +3,31 @@
     li
       b Last Fill:
       | &nbsp;
-      = "#{@current_regime.last_fill_ml} ml"
+      = "#{current.last_fill_ml} ml"
 
     li
       b Additional manual exchange?:
       | &nbsp;
-      = yes_no(@current_regime.add_manual_exchange)
+      = yes_no(current.add_manual_exchange)
 
     li
       b Tidal?:
       | &nbsp;
-      = yes_no(@current_regime.tidal_indicator)
+      = yes_no(current.tidal_indicator)
 
     li
       b Tidal:
       | &nbsp;
-      = "#{@current_regime.tidal_percentage} %"
+      = "#{current.tidal_percentage} %"
 
 .large-3.columns
   ul.no-bullet
     li
       b Number of cycles per APD session:
       | &nbsp;
-      = @current_regime.no_cycles_per_apd
+      = current.no_cycles_per_apd
 
     li
       b Overnight PD volume on APD:
       | &nbsp;
-      = "#{@current_regime.overnight_pd_ml} ml"
+      = "#{current.overnight_pd_ml} ml"
