Be consistent with headers
- use H1 for all headers
- expect for patient headers which are h2

--- a/app/views/renalware/event_types/index.html.slim
+++ b/app/views/renalware/event_types/index.html.slim
@@ -1,5 +1,5 @@
 .row
-  h4 All Patient Event Types
+  h1 Event Types
 
 .row
   = link_to "Add New Patient Event Type", new_event_type_path, class: "button tiny"
