--- a/app/views/renalware/modality_codes/index.html.slim
+++ b/app/views/renalware/modality_codes/index.html.slim
@@ -1,5 +1,5 @@
 .row
-  h4 Manage Modalities
+  h1 Modalities
 
 .row
   = link_to "Add A New Modality", new_modality_code_path, class: "button tiny"
