--- a/app/views/renalware/events/new.html.slim
+++ b/app/views/renalware/events/new.html.slim
@@ -3,7 +3,7 @@
     = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
     = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
 
-    h5 Add a New Patient Event
+    h2 Patient Event
 
 = render partial: "renalware/shared/errors", locals: { model: @event }
 
