--- a/app/views/renalware/events/index.html.slim
+++ b/app/views/renalware/events/index.html.slim
@@ -5,16 +5,12 @@
 
     h2 Patient Events
 
-  table.responsive
+  table
     thead
-      th
-        | Added
-      th
-        | Event Type
-      th
-        | Description
-      th
-        | Date/Time
+      th Added
+      th Event Type
+      th Description
+      th Date/Time
 
     tbody
       = render @events
