--- a/app/views/renalware/letters/index.html.slim
+++ b/app/views/renalware/letters/index.html.slim
@@ -5,19 +5,14 @@
 
     h2 Letters
 
-    table.letters.responsive
+    table.letters
       thead
         tr
-          th
-            | Author
-          th
-            | Description
-          th
-            | State
-          th
-            | Last updated
-          th.g-center
-            | Actions
+          th Options
+          th Author
+          th Description
+          th State
+          th Last updated
 
       tbody
         = render @letters
