--- a/app/views/renalware/event_types/index.html.slim
+++ b/app/views/renalware/event_types/index.html.slim
@@ -5,13 +5,16 @@
   = link_to "Add New Patient Event Type", new_event_type_path, class: "button tiny"
 
 .row
-  .small-12.large-6.columns
-    ul.no-bullet.stripy-list
+  table
+    thead
+      tr
+        th Options
+        th Name
+    tbody
       - @event_types.each do |t|
-        li.row
-          .small-4.large-8.columns
-            = t.name
-          .small-4.large-2.columns
+        tr
+          td
             = link_to "Edit", edit_event_type_path(t.id)
-          .small-4.large-2.columns
-            = link_to "Delete", event_type_path(t.id), id: "#{t.id}-pet", method: :delete, class: "delete", data: {confirm: "Are you sure you want to delete this option?" }
+            |&nbsp;|&nbsp;
+            = link_to "Delete", event_type_path(t.id), id: "#{t.id}-pet", method: :delete, data: {confirm: "Are you sure you want to delete this option?" }
+          td= t.name
