--- a/app/views/renalware/events/_event.html.slim
+++ b/app/views/renalware/events/_event.html.slim
@@ -1,15 +1,12 @@
 tr
-  td data-heading="Added"
-    = event.created_at.strftime("%d/%m/%Y")
-  td data-heading="Event Type"
-    = event.event_type.name
-  td data-heading="Description"
+  td= event.created_at.strftime("%d/%m/%Y")
+  td= event.event_type.name
+  td
     dl.accordion(data-accordion)
       dd.accordion-navigation
         a.fi-plus.fi-minus.toggle-info id="patient-event-notes-#{event.id}" href="#patient-event-notes-#{event.id}"
           = event.description
         .content.toggle-content id="patient-event-notes-#{event.id}"
           = event.notes
-  td data-heading="Time"
-    = event.date_time
+  td= event.date_time
 
