--- a/app/views/renalware/patients/_patient.html.slim
+++ b/app/views/renalware/patients/_patient.html.slim
@@ -1,15 +1,8 @@
 tr
-  td data-heading="Name"
-    = link_to patient.to_s(:last_first), clinical_summary_patient_path(patient), title: 'Clinical Summary'
-  td data-heading="NHS No."
-    = patient.nhs_number
-  td data-heading="Hospital No."
-    = patient.local_patient_id
-  td data-heading="Sex"
-    = I18n.t("enums.gender.#{patient.sex}")
-  td data-heading="DoB"
-    = patient.birth_date
-  td data-heading="Age"
-    = patient.age
-  td.g-center data-heading="Admin"
-    = link_to 'Demographics', demographics_patient_path(patient), title: 'Demographics'
+  td= link_to 'Demographics', demographics_patient_path(patient), title: 'Demographics'
+  td= patient.to_s(:last_first)
+  td= patient.nhs_number
+  td= patient.local_patient_id
+  td= I18n.t("enums.gender.#{patient.sex}")
+  td= patient.birth_date
+  td= patient.age
