--- a/app/views/renalware/bag_types/index.html.slim
+++ b/app/views/renalware/bag_types/index.html.slim
@@ -29,7 +29,7 @@
           tr
             td
               = link_to "Edit", edit_bag_type_path(bt.id), id: "edit-bag-type-#{bt.id}"
-              |&nbsp;|&nbsp;
+              = pipe_separator;
               = link_to "Delete", bag_type_path(bt.id), method: :delete , id: "delete-bag-type-#{bt.id}", data: { confirm: "Are you sure you want to delete this bag type?" }
               td= bt.manufacturer
               td= bt.description
