--- a/app/views/renalware/event_types/index.html.slim
+++ b/app/views/renalware/event_types/index.html.slim
@@ -15,6 +15,6 @@
         tr
           td
             = link_to "Edit", edit_event_type_path(t.id)
-            |&nbsp;|&nbsp;
+            = pipe_separator
             = link_to "Delete", event_type_path(t.id), id: "#{t.id}-pet", method: :delete, data: {confirm: "Are you sure you want to delete this option?" }
           td= t.name
