--- a/app/views/renalware/modality_codes/index.html.slim
+++ b/app/views/renalware/modality_codes/index.html.slim
@@ -18,7 +18,7 @@
         tr
           td
             = link_to "Edit", edit_modality_code_path(m.id)
-            |&nbsp;|&nbsp;
+            = pipe_separator
             = link_to "Delete", modality_code_path(m.id), method: :delete, data: { confirm: "Are you sure you want to delete this modal?" }
           td= m.name
           td= m.code
