Remove Option/Action titles in the header
Just more noise in tight tables. This also cleans up some of the table
headers after the automated conversion to Slim.

--- a/app/views/renalware/letters/author.html.slim
+++ b/app/views/renalware/letters/author.html.slim
@@ -5,16 +5,11 @@
   table.letters.responsive
     thead
       tr
+        th Patient
+        th Description
+        th State
+        th Last updated
         th
-          | Patient
-        th
-          | Description
-        th
-          | State
-        th
-          | Last updated
-        th.g-center
-          | Actions
 
     tbody
       = render @letters
