--- a/app/views/renalware/modality_reasons/index.html.slim
+++ b/app/views/renalware/modality_reasons/index.html.slim
@@ -1,22 +1,18 @@
 .wide-screen
   .columns.large-12
-  h5
-    | Renal Registry Reason for Change Codes
+  h5 Renal Registry Reason for Change Codes
 
 .row
   table.responsive
     caption Haemodialysis to PD
     thead
       tr
-        th.g-center
-          | RR Code
-        th
-          | Reason for Change
+        th.g-center RR Code
+        th Reason for Change
 
     tbody
       - @reason_hd_pd.each do |mr|
         tr
-
           td.g-center data-heading="RR Code"
             = mr.rr_code
           td data-heading="Haemodialysis to PD"
@@ -27,15 +23,12 @@
     caption PD to Haemodialysis
     thead
       tr
-        th.g-center
-          | RR Code
-        th
-          | Reason for Change
+        th.g-center RR Code
+        th Reason for Change
 
     tbody
       - @reason_pd_hd.each do |mr|
         tr
-
           td.g-center data-heading="RR Code"
             = mr.rr_code
           td data-heading="PD to Haemodialysis"
