--- a/app/views/renalware/event_types/edit.html.slim
+++ b/app/views/renalware/event_types/edit.html.slim
@@ -1,13 +1,12 @@
-h5 Edit Patient Event Type
+= render "header"
 
 = render partial: "renalware/shared/errors", locals: { model: @event_type }
 
-.large-6.columns
-
-  = form_for @event_type, method: :put do |f|
-    fieldset
+.row
+  .large-6.columns
+    = form_for @event_type, method: :put do |f|
       = render partial: "renalware/event_types/form", locals: { f: f }
 
-      = submit_tag "Update Patient Event Type", class: "button tiny right"
-
-      = link_to "Cancel", event_types_path, class: "button tiny cancel"
+      = submit_tag "Update", class: "button"
+      span= " or "
+      = link_to "cancel", event_types_path
