--- a/app/views/renalware/event_types/index.html.slim
+++ b/app/views/renalware/event_types/index.html.slim
@@ -1,8 +1,4 @@
-.row
-  h1 Event Types
-
-.row
-  = link_to "Add New Patient Event Type", new_event_type_path, class: "button tiny"
+= render 'header'
 
 .row
   table
