--- a/app/views/renalware/modality_codes/edit.html.slim
+++ b/app/views/renalware/modality_codes/edit.html.slim
@@ -1,17 +1,12 @@
-.row
-  h4 Edit Modality Code
+= render 'header'
 
 .row
   = render partial: "renalware/shared/errors", locals: { model: @modal_code }
 
 .row
   .large-6.columns
-    ul.no-bullet
-
-      = form_for @modal_code, method: :put do |m|
-
-        = render partial: "renalware/modality_codes/form", locals: { m: m }
-
-        = submit_tag "Update Modal", class: "button tiny right"
-
-        = link_to "Cancel", modality_codes_path, class: "button tiny cancel"
+    = form_for @modal_code, method: :put do |m|
+      = render partial: "renalware/modality_codes/form", locals: { m: m }
+      = submit_tag "Update", class: "button"
+      span= " or "
+      = link_to "Cancel", modality_codes_path
