--- a/app/views/renalware/modality_codes/new.html.slim
+++ b/app/views/renalware/modality_codes/new.html.slim
@@ -1,18 +1,13 @@
-.row
-  h4 Add New Modality Code
+= render "header"
 
 .row
   = render partial: "renalware/shared/errors", locals: { model: @modal_code }
 
 .row
   .large-6.columns
-    ul.no-bullet
-
       = form_for @modal_code, method: :post do |m|
-
         = render partial: "renalware/modality_codes/form", locals: { m: m }
 
-        = submit_tag "Save", class: "button tiny right save"
-
-        li= link_to "Cancel", modality_codes_path, class: "button tiny cancel"
-
+        = submit_tag "Save", class: "button"
+        span= " or "
+        = link_to "cancel", modality_codes_path
