--- a/app/views/renalware/bag_types/new.html.slim
+++ b/app/views/renalware/bag_types/new.html.slim
@@ -1,18 +1,18 @@
+= render "header"
+
 .row
   .large-12.columns
     = render partial: "renalware/shared/errors", locals: { model: @bag_type }
 
 .row
-  = field_set_tag do
-    .row
-      .large-12.columns
-        h4 Create a new PD Bag Type
+  .row
+    .large-12.columns
+      h4 Create a new PD Bag Type
 
-    = form_for @bag_type, method: :post do |bt|
+  = form_for @bag_type, method: :post do |bt|
 
-      = render partial: "renalware/bag_types/form", locals: { bt: bt }
+    = render partial: "renalware/bag_types/form", locals: { bt: bt }
 
-      ul.no-bullet.button-padding
-        li= submit_tag "Save New Bag Type", class: "button tiny right save"
-        li= link_to "Cancel", patients_path, class: "button tiny cancel"
-
+    = submit_tag "Save", class: "button"
+    span= " or "
+    = link_to "cancel", patients_path
